--- a/webapp/pom.xml
+++ b/webapp/pom.xml
@@ -7,6 +7,18 @@
     <groupId>com.example.maven-project</groupId>
     <artifactId>maven-project</artifactId>
     <version>1.0-SNAPSHOT</version>
+     <executions>
+        <execution>
+          <id>default-deploy</id>
+          <phase>deploy</phase>
+          <goals>
+            <goal>deploy</goal>
+          </goals>
+        </execution>
+      </executions>
+      <configuration>
+        <altDeploymentRepository>internal.repo::default::http://localhost:8081/repository/nexus-poc</altDeploymentRepository>
+      </configuration>       
     <relativePath>../pom.xml</relativePath>
   </parent>
 
